fixing background not showing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -124,7 +124,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('/images/nasa.png');
+  background-image: url('./images/nasa.png');
   height: 85vh;
   background-attachment: fixed;
   background-position: center;
